# AI-Powered-Market-Analyst

./: .gitignore  README.md
backend/: .env.example  README.md  app.py  pyproject.toml  requirements.txt
backend/agents/: industry_research_agent.py  orchestrator.py  resource_collection_agent.py  use_case_generation_agent.py
backend/config/: config,yml  config.yml  logging_config.py  settings.py
backend/data/: react.txt
backend/data/output/: trace.json
backend/models/: gemini_client.py  llm_interface.py
backend/src/config/: __init__.py  log_config.py  logging.py  setup.py
backend/src/llm/: gemini.py  listmodels.py  test.py
backend/src/react/: __init__.py  agent.py  constants.py
backend/src/tools/: competitor_analysis.py  dataset_search.py  google_search.py  industry_report.py  manager.py  product_search.py
backend/src/utils/: io.py
backend/tools/: analysis_tools.py  dataset_tools.py  document_tools.py  search_tools.py
backend/workflows/: research_workflow.py  resource_workflow.py  use_case_workflow.py
client/: jsconfig.json  package-lock.json  package.json  tailwind.config.js
client/src/components/forms/: AnalysisForm.jsx
client/src/components/layout/: Footer.jsx  Header.jsx  Layout.jsx
client/src/components/results/: ResourceLinks.jsx  ResultsPanel.jsx  UseCaseCard.jsx
client/src/components/ui/: Button.jsx  Card.jsx  Input.jsx  Loader.jsx
client/src/pages/: about.js  index.js
client/src/pages/results/: [id].js
client/src/services/: api.js
client/src/styles/: globals.css
