[tool.poetry]
name = "AI-Powered-Market-Analyst"
version = "0.0.1"
description = "Automated Market Researcher"
authors = ["Prajwal Kumbar <prajwal0836@google.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "react", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0"
requests = "^2.31.0"
google-search-results = "^2.4.2"
google-cloud-aiplatform = "1.67.1"
wikipedia-api = "^0.7.1"
numpy = "1.24.4"

[build-system]
requires = ["poetry-core", "setuptools>=42", "wheel"]
build-backend = "poetry.core.masonry.api"